app/assets/stylesheets/glownet/_events.sass
@import colors

.danger
  td
    background-color: #ffe3e1


.good_header
  background-color: #d0e7bc !important
  margin: 0 !important

.bad_header
  background-color: #ffb2b2 !important
  margin: 0 !important

.neutral_header
  background-color: #fedebd !important
  margin: 0 !important

.neutral2_header
  background-color: #b8cce8 !important
  margin: 0 !important

.good_info
  color: #9ecf68 !important

.bad_info
  color: #e26465 !important

.neutral_info
  color: #e8b14f !important

.neutral2_info
  color: #7282e8 !important

.mdl-card__title
  height: 80px

.mdl-layout__header-row
  a.mdl-button
    .material-icons
      color: #e7e7e7

    &:hover
      .material-icons
        color: white

.mdl-data-table.within-card
  width: 100% !important
  border: none !important
  table-layout: auto
  white-space: normal

.mdl-button.within-card
  min-width: none !important
  padding: 0 !important

.admin-card-wide
  width: 100% !important
  min-height: auto !important

.mce-panel
  border: 0 !important

.best_in_place
  cursor: pointer

  &:hover
    font-style: italic

.filters
  &__item
    margin-right: 0.5rem
    color: $grayAsh
    transition: color 0.2s
    text-decoration: none

    &--active
      color: $grayDark
      text-decoration: underline

    &:hover
      color: $grayDark
      text-decoration: none

    &:last-child
      margin-right: 0

.event-submit
  margin-left: 5% !important

.checkbox
  input[type=checkbox]
    display: none

.btn-dashboard
  width: 100%

.btn-dashboard-created
  background-color: $amber !important
  color: white !important

  &:hover, &:focus
    background-color: lighten($amber,10%) !important
    outline: none !important

.btn-dashboard-launched
  background-color: $amber !important
  color: white !important

  &:hover, &:focus
    background-color: lighten($amber,10%) !important
    outline: none !important

.btn-dashboard-started
  background-color: $goGreen !important
  color: white !important

  &:hover, &:focus
    background-color: lighten($goGreen,10%) !important
    outline: none !important

.btn-dashboard-finished
  background-color: $red !important
  color: white !important

  &:hover, &:focus
    background-color: lighten($red,10%) !important
    outline: none !important

.btn-dashboard-claiming_started
  background-color: $red !important
  color: white !important

  &:hover, &:focus
    background-color: lighten($goGreen,10%) !important
    outline: none !important

.btn-dashboard-closed
  background-color: $amber !important
  color: white !important

  &:hover, &:focus
    background-color: lighten($amber,10%) !important
    outline: none !important

.data-card-wide
  width: 100% !important
  .info-container
    width: 80%
    margin: 2% auto

//PROGRESS BAR//

.status-container
  text-align: center
  margin: 0 auto

.radio
  display: none

.status-container
  label
    display: inline-block
    margin: 0 5px
    padding: 3px 8px
    color: #aaa
    border-radius: 3px
    cursor: pointer

.radio:checked + label
  color: white
  background: rgba(0, 0, 0, 0.25)

.event-img-preview
  width: 100%

.mdl-data-table.mdl-js-data-table.mdl-data-table--selectable.within-card
  tbody
    tr
      td:first-of-type
        width: 48px !important

